--- a/template.html
+++ b/template.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html class="h-100">
+<html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <title>Hello Rigo with Vanilla.js</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" >
     </head>
-    <body class="h-100">
-        <div id="app" class="h-100"></div>
+    <body>
+        <div id="app"></div>
     </body>
 </html>
